Binary executor ea (#977)
* sql wire seperate

* app refactor

* team removed dependency

* team repository removal

* team refactor

* team user

* import cleanup

* team rest handler

* team wireset

* cluster-account cleanup

* clustr-helm-config cleanup

* cluster account repo

* refactor

* refactor

* wire

* ea wiring working

* user auth repo+ service refactor

* userAuth rest handler

* enforcer util refactor

* user wire

* wire refactor

* token verifier correction

* jwt util correction

* sso login refactor

* sso cleanup

* team wire

* team wire

* sso conf wireset

* comment correction

* env dependency cleanup

* cluster inpl

* cluster env removed redundant dependency

* cluster wire clean

* sso conf ea integrated

* team dependency cleanup

* authenticator upgrade

* team router

* user auth dependency clean

* user access tested

* user auth dependency clean

* user auth binary

* auth path refactor

* refactoring

* clusterService impl

* cluster-env refactor

* sql util

* refactor 1

* acd dependency clean

* cluster refactor

* cluster router integrated

* dashboard url

* dashboard refactor

* dashboard router impl

* format

* global conf tested

* build file config

* devtron ea only dockerfile

* docker file

* local dev mode correction

* version api

* path correction for version api

--- a/cmd/external-app/Makefile
+++ b/cmd/external-app/Makefile
@@ -1,5 +1,3 @@
-#!make
-
 all: build
 
 TAG?=$(shell bash -c 'git log --pretty=format:'%h' -n 1')
@@ -10,28 +8,26 @@ REGISTRY?=686244538589.dkr.ecr.us-east-2.amazonaws.com
 BASEIMAGE?=alpine:3.9
 #BUILD_NUMBER=$$(date +'%Y%m%d-%H%M%S')
 BUILD_NUMBER := $(shell bash -c 'echo $$(date +'%Y%m%d-%H%M%S')')
-ENV_FILE?=scripts/dev-conf/envfile.env
 GIT_COMMIT =$(shell sh -c 'git log --pretty=format:'%h' -n 1')
 BUILD_TIME= $(shell sh -c 'date -u '+%Y-%m-%dT%H:%M:%SZ'')
 SERVER_MODE_FULL= FULL
 SERVER_MODE_EA_ONLY=EA_ONLY
-include $(ENV_FILE)
 export
 
 build: clean wire
-	$(ENVVAR) GOOS=$(GOOS) go build -o devtron \
+	$(ENVVAR) GOOS=$(GOOS) go build -o devtron-ea \
 			-ldflags="-X 'github.com/devtron-labs/devtron/util.GitCommit=${GIT_COMMIT}' \
 			-X 'github.com/devtron-labs/devtron/util.BuildTime=${BUILD_TIME}' \
-			-X 'github.com/devtron-labs/devtron/util.ServerMode=${SERVER_MODE_FULL}'"
+			-X 'github.com/devtron-labs/devtron/util.ServerMode=${SERVER_MODE_EA_ONLY}'"
 
 wire:
 	wire
 
 clean:
-	rm -f devtron
+	rm -f devtron-ea
 
 run: build
-	./devtron
+	./devtron-ea
 
 .PHONY: build
 docker-build-image:  build
@@ -41,11 +37,3 @@ docker-build-image:  build
 docker-build-push: docker-build-image
 	docker tag devtron:${TAG}  ${REGISTRY}/devtron:${TAG}
 	docker push ${REGISTRY}/devtron:${TAG}
-
-#############################################################################
-
-build-all: build
-	make --directory ./cmd/external-app build
-
-build-ea:
-	make --directory ./cmd/external-app build
