fix autoscale on lens and guard manifests

--- a/manifests/yamls/guard.yaml
+++ b/manifests/yamls/guard.yaml
@@ -27,7 +27,7 @@ spec:
     app: guard
 ---
 # Source: guard/templates/hpa.yaml
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: guard-hpa
