spec for release-info

--- a/specs/external-app/applist.yaml
+++ b/specs/external-app/applist.yaml
@@ -374,6 +374,10 @@ components:
           type: integer
           description: unique identifier for the project, APP with no project will have id `0`
           example: "12"
+        chartVersion:
+          type: string
+          description: chart version
+          example: 1.2.3
         environmentDetail:
           type: object
           $ref: "#/components/schemas/AppEnvironmentDetail"
@@ -545,7 +549,7 @@ components:
       properties:
         deployedAppDetail:
           type: object
-          $ref: "#/components/schemas/HelmAppDeploymentDetail"
+          $ref: "#/components/schemas/HelmApp"
           description: deployment deils
         defaultValues:
           type: string
@@ -559,9 +563,6 @@ components:
         readme:
           type: string
           description: readme of the chart
-        appName:
-          type: string
-          description: relase name
         environmentDetail:
           type: object
           $ref: "#/components/schemas/AppEnvironmentDetail"
