updated spec - review changes

--- a/specs/external-app/appdetail-resource.yaml
+++ b/specs/external-app/appdetail-resource.yaml
@@ -118,20 +118,10 @@ paths:
             text/event-stream:
               schema:
                 $ref: "#/components/schemas/EventsResponseObject"
-  /orchestrator/k8s/pods/logs/{clusterId}/{releaseName}/{podName}:
+  /orchestrator/k8s/pods/logs/{podName}:
     get:
       description: this api will be used for fetching logs for container.
       parameters:
-        - name: clusterId
-          in: path
-          required: true
-          schema:
-            type: integer
-        - name: releaseName
-          in: path
-          required: true
-          schema:
-            type: string
         - name: podName
           in: path
           required: true
@@ -142,11 +132,12 @@ paths:
           required: true
           schema:
             type: string
-        - name: namespace
+        - name: appId
           in: query
           required: true
           schema:
             type: string
+            description: pipe separated values of - clusterId, namespace, releaseName(in the same order)
         - name: follow
           in: query
           schema:
@@ -231,23 +222,11 @@ components:
     ResourceRequestObject:
       type: object
       properties:
-        appIdentifier:
-          $ref: '#/components/schemas/AppIdentifierObject'
+        appId:
+          type: string
+          description: pipe separated values of - clusterId, namespace, releaseName(in the same order)
         k8sRequest:
           $ref: '#/components/schemas/K8sRequestObject'
-    AppIdentifierObject:
-      type: object
-      properties:
-        clusterId:
-          type: number
-        namespace:
-          type: string
-        releaseName:
-          type: string
-      required:
-        - clusterId
-        - namespace
-        - releaseName
     K8sRequestObject:
       type: object
       properties:
